# rmcp-trash

./: Cargo.toml
src/: main.rs
