[package]
name = "rmcp-trash"
version = "0.1.0"
edition = "2021"
description = "MCP server for cross-platform trash/recycle bin operations"
license = "MIT"
repository = "https://github.com/sqrew/rmcp-trash"
keywords = ["mcp", "trash", "recycle", "rmcp"]
categories = ["filesystem", "api-bindings"]

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
trash = "5"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
